# telegram-bot

./: Dockerfile  pyproject.toml  test.py
src/: __main__.py
src/api/: __init__.py  ingredients.py
src/models/: ingredients.py
src/routers/: __init__.py  common.py
src/routers/commands/: __init__.py  base_commands.py  get_all_command.py  get_shoplist_command.py  search_command.py
src/settings/: __init__.py  settings.py
