[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot to access to Hell Chicken services"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
